--- a/LabelTest/LabelTest.vcxproj
+++ b/LabelTest/LabelTest.vcxproj
@@ -102,25 +102,32 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Geometry.h" />
+    <ClInclude Include="Label.h" />
     <ClInclude Include="LabelTest.h" />
     <ClInclude Include="LabelTestDlg.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Utils.h" />
+    <ClInclude Include="Visualisation.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Geometry.cpp" />
+    <ClCompile Include="Label.cpp" />
     <ClCompile Include="LabelTest.cpp" />
     <ClCompile Include="LabelTestDlg.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Utils.cpp" />
+    <ClCompile Include="Visualisation.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="LabelTest.rc" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram.cd" />
     <None Include="res\LabelTest.rc2" />
   </ItemGroup>
   <ItemGroup>
@@ -129,4 +136,9 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties RESOURCE_FILE="LabelTest.rc" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
